Tue Jul 27 13:07:02 1993  Kevin Layer  (layer at sole)

	* clmanaux.c: exit status <0 means `failed'
	* clman.c: exit status 0 means `failed'
	* makeman.c: exit status -1 means `failed'
	* clman.h: extern for `failed'

	* fi-basic-lep.el: open-network-stream -> fi::open-network-stream;
	prin1-to-string -> fi::prin1-to-string

	* fi-clman.el: use minibuffer in `failed' case

	* fi-leep-lemacs.el: start of fix for bug2757

	* fi-subproc.el: open-network-stream -> fi::open-network-stream

	* fi-utils.el: fi::open-network-stream, so we can catch certain
	errors (like /etc/hosts not being readable); fi::prin1-to-string,
	so we can make sure print-escape-newlines is nil.

	* Doc.el: prin1-to-string -> fi::prin1-to-string

Fri Jul 23 00:01:17 1993  Kevin Layer  (layer@sole)

	* Makefile: fix fi-dist rule, add clman-dist; move contents of
	Makefile.fi here

Thu Jul 22 20:45:32 1993  Kevin Layer  (layer at sole)

	* Makefile: new file fi-leep-lemacs.el

	* fi-clman.el: look in exec-path for `clman'

	* fi-leep-lemacs.el: presenting listeners work for lemacs!

	* fi-leep.el: push more stuff on fi::initialization-forms

	* fi-site-init.el: load fi-leep-lemacs.elc, when in lemacs

	* fi-subproc.el: generalize and hooks to fi::subprocess-filter so
	that the fi-leep-lemacs.el can use it.

	* fi-utils.el: add fi::insert-string (used by epoch and lemacs
	leeps)

Thu Jul 22 16:55:18 1993  Kevin Layer  (layer at sole)

	* fi-lemacs.el: more menu hacking

	* fi-lep.el: fix fi::compile-or-load-file to give better
	notification of what it is doing.

Thu Jul 22 16:04:14 1993  Kevin Layer  (layer at sole)

	* Makefile.fi: local rdist rules; new rules for makeman, et al

	* clman.c, clman.h, clmanaux.c, makeman.c

	* fi-clman.el: use new clman.data, if it exists

	* fi-indent.el: &env -> &environment

	* fi-lemacs.el: redesign menus, looks better but still not done

	* fi-utils.el: fi::get-default-symbol looks at new variable,